# rusty-chat

./: .gitignore  Cargo.toml  NOTES.md  README.md  schema.sql
.cargo/: config.toml
config/: base.toml  development.toml  staging.toml
migrations/: 20251204124555_init_with_users_table.sql  20251208091337_added_access_and_refresh_token_fields_to_user.sql  20251210115124_updated_user_table_with_status_and_last_seen_time.sql  20251210120350_created_chat_rooms_table.sql  20251210121021_created_room_members_table.sql  20251210122306_created_messages_table.sql  20251210123243_created_call_log_table.sql  20251211060711_added_bookmarking_and_archiving_fields_to_messages_table.sql  20251212070306_added_is_admin_and_is_active_fields_to_user_table.sql  20251213151853_added_is_logged_out_field_to_user_table.sql  20251217145631_created_message_status_receipt_table.sql  20251217164102_altered_user_table_profile_image_url_field_to_just_profile_image.sql  20251219111723_removed_the_administrators_fields_from_the_rooms_table.sql  20251219112242_reconstructed_the_room_members_table.sql  20251219112344_reconstructed_the_message_status_receipts_table.sql  20251220072904_added_is_bookmarked_and_is_archived_fields_to_rooms_table.sql  20251220081547_added_co_member_field_to_rooms_table.sql  20251220084408_fix_for_co_member_and_i64_mismatch.sql  20251220103728_added_co_members_field_on_rooms_table.sql  20251220104914_added_room_profile_image_field_to_rooms_table.sql  20251220112117_updated_rooms_table_with_fix_for_archiving_and_bookmarking.sql  (+20 more)
src/: main.rs
trash/: create_message copy.rs  (+4 more)
(+78 files in other folders)
