[package]
name = "rust-axum-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.117.0", features = ["behavior-version-latest"] }
axum = { version = "0.8.7", features = ["multipart"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"]}
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tower-cookies = "0.11.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json", "time"] }
aws-credential-types = { version = "1.2.11", features = ["hardcoded-credentials"] }
anyhow = "1.0.100"
config = "0.15.19"
